<resources>
    <string name="app_name">myapi</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="mobile_number">Mobile number</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="email_addreess">Email addreess</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="surname">Surname</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="first_name">First name</string>
    <string name="register">REGISTER</string>
    <string name="school">School</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Reset Password</string>
    <string name="startPage">An IoT Framework</string>
    <string name="poweredby">Powered by Internet of Things</string>
    <string name="developer">Developed by: Julius Peter Odeke</string>
    <string name="applogo">appLogo</string>
</resources>