<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/color2"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:background="@drawable/grad_bg">

        <ImageView
            android:layout_width="111dp"
            android:layout_height="118dp"
            android:contentDescription="@string/applogo"
            android:src="@drawable/ic_person" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/mobile_number"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputfield_radius"
            android:inputType="phone"
            android:drawableStart="@drawable/ic_call"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/inputfield_radius"
            android:drawableStart="@drawable/ic_lock"
            android:autofillHints="" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:background="@drawable/button_round"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:lineSpacingExtra="7dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/primary"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewSignUp"
                android:text="@string/register"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:lineSpacingExtra="7dp"
                android:textSize="15sp"
                android:textAllCaps="true"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewforgotPassword"
                android:text="@string/forgot_password"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:lineSpacingExtra="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textAllCaps="true"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>