<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity"
    android:background="@color/color2"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:background="@drawable/grad_bg">

        <ImageView
            android:layout_width="137dp"
            android:layout_height="110dp"
            android:contentDescription="@string/applogo"

            android:src="@drawable/ic_person" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/register"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputfield_radius"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:drawableStart="@drawable/ic_person"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputfield_radius"
            android:hint="@string/mobile_number"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_call"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputfield_radius"
            android:drawableStart="@drawable/ic_lock"
            android:autofillHints="" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/button_round"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:lineSpacingExtra="7dp"
            android:text="@string/have_an_account_login"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>
</RelativeLayout>